src/pages/LandingPageV3/style.css
/* ... */
#why-generate {
  padding-left: 4rem;
  padding-right: 4rem;
}

#values-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.value {
  width: fit-content;
  white-space: nowrap;
  color: white;
  font-family: 'Space Mono 700';
  font-size: 4rem;
  line-height: 100%;
  text-transform: uppercase;
  margin-bottom: 1rem;
}

#socials {
  display: flex;
  flex-direction: row;
  gap: 1.5rem;
  margin-top: 4rem;
}

.social-icon {
  width: 3rem;
  height: 3rem;
}

.social-icon:hover {
  transform: scale(1.1);
}

.white-h2-text {
  color: white;
  font-family: 'Space Mono 700';
  font-size: 3rem;
  line-height: 100%;
  text-transform: uppercase;
  margin-bottom: 1rem;
}

.white-header-text {
  color: white;
  font-family: 'Space Mono 700';
  font-size: max(4rem, 5vw);
  line-height: 100%;
  text-transform: uppercase;
  margin-bottom: 1rem;
}

.white-p-text {
  color: white;
  font-family: Outfit;
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 500;
  max-width: 85vw;
  margin-bottom: 0.5rem;
}

.we-are-container {
  display: flex;
  justify-content: space-around;
  gap: 2rem;
  min-width: 0;
  padding-top: 1rem;
  flex-wrap: nowrap;
}

.we-are-img-div {
  display: flex;
  justify-content: center;
  align-items: center;
}

.image-shadow {
  box-shadow: 1px 1px 5px rgba(255,255,255,0.3);
  outline: 0.1px rgba(255,255,255,0.3) solid;
}

.image-shadow:hover {
  box-shadow: 2px 2px 10px rgba(255,255,255,0.3);
  outline: 1px rgba(255,255,255,0.3) solid;
}

.we-are-img {
  height: 20rem;
  object-fit: scale-down;
}

.why-gen-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 2rem;
}

.why-gen-col {
  display: flex;
  flex-direction: column;
}

.why-gen-col-content {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.why-gen-img {
  width: min(calc(100% - 1rem), 40vw);
  height: auto;
  aspect-ratio: 5223/3482;
  object-fit: contain;
}

.choose-character-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  max-width: 1800px;
  margin: auto;
}

.choose-character-col {
  display: flex;
  flex-direction: column;
  width: 50%;
  gap: 2rem;
}

.choose-character-container {
  display: flex;
  flex-direction: column;
  padding-left: 4rem;
  gap: 3rem;
}

.mascot-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  padding-right: 6rem;
}

#choose-text {
  text-wrap: nowrap;
}

.colored-mascot {
  width: 7vw;
}

.mascot-button {
  cursor: pointer;
  padding: 1.5rem;
  margin: -1rem;
}

.mascot-button:nth-child(odd) {
  margin-top: 1rem;
  padding-top: 3rem;
}

.mascot-button:nth-child(even) {
  margin-bottom: 1rem;
  padding-bottom: 3rem;
}

#rainbow-trim {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 0;
  right: 0;
  bottom: 0;
  background-size: 100% 100%;
  padding-top: 50%;
  background-repeat: no-repeat;
  z-index: -5;
  width: 100vw;
  background-image: url('../../assets/images/landingpage-v3/RainbowTrim.svg');
  object-fit: fill;
}

.arcade-link {
  opacity: 0.6;
}

.arcade-link:hover {
  opacity: 0.8;
  text-decoration: underline;
}

#arcade-machine {
  width: 30%;
  z-index: 1;
}

#showcase-year-nobr {
  display: none;
}

#showcase-large-stars {
  width: 100%;
  height: auto;
}

#showcase-small-stars {
  width: 100%;
  height: auto;
}

#showcase-content {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-bottom: 4rem;
}

#why-generate,
#how-structured,
#we-are,
#showcase-content,
.bg-row {
  max-width: 1800px;
  margin: auto;
}

#showcase-header {
  margin-top: -9vw;
}

#showcase-top-content {
  display: flex;
  flex-direction: row;
  gap: 2rem;
}

#showcase-right-col {
  display: flex;
  flex-direction: column;
}

.showcase-img {
  width: max(18rem, calc(50% - 1rem));
  height: fit-content;
  object-fit: contain;
}

#showcase-year-title {
  margin-top: -2.5rem;
}

#showcase-carousel {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  justify-content: space-around;
  align-items: center;
}

#carousel-inner-content {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding-left: 4rem;
  padding-right: 4rem;
  gap: 2rem;
  width: 100%;
}

#showcase-carousel-label {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  width: 15rem;
}

.showcase-year {
  overflow-wrap: break-word;
  color: white;
  font-family: 'Space Mono';
  font-size: 8rem;
  font-style: normal;
  font-weight: 700;
  line-height: 90%;
  text-transform: uppercase;
}

#parent-orgs-header {
  width: 20rem;
  font-size: 4rem;
  word-wrap: break-word;
}

#parent-orgs-container {
  display: flex;
  flex-direction: row;
  width: 100%;
  margin-top: 6rem;
  margin-bottom: 3rem;
  justify-content: space-between;
}

#parent-orgs-content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: flex-end;
}

#showcase-year-label {
  font-size: 3rem;
}

.parent-org {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  justify-content: center;
  align-items: center;
}

.parent-org > a {
  text-align: end;
  font-size: 2rem;
}

#what-is-img-container {
  width: 50%;
  display: grid;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 1fr);
  padding: 1rem;
  margin: auto;
}

.what-is-img-div {
  display: flex;
  align-items: center;
  justify-content: center;
}

#what-is-img-1 {
  grid-row-start: 1;
  grid-row-end: 2;
  grid-column-start: 1;
  grid-column-end: 4;
}

#what-is-img-2 {
  grid-row-start: 2;
  grid-row-end: 3;
  grid-column-start: 2;
  grid-column-end: 5;
}

.what-is-img {
  height: min(15rem, 20vw);
  margin: auto;
}

.showcase-carousel-button {
  height: 12rem;
}
/* ... */

